# kernel

./: .gitignore  Cargo.toml  build_bundle.sh  build_image.sh  check.sh  clippy.sh  inline_debug_info.sh  run_qemu.sh
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/src/: common.rs  main.rs
embed/: Cargo.toml
embed/src/: common.rs  main.rs
inline_debug_info/: Cargo.toml
inline_debug_info/src/: main.rs  structures.rs
kernel/: Cargo.toml  build.rs  link.ld
kernel/src/: allocator.rs  backtrace.rs  console.rs  discovery.rs  display.rs  ext2.rs  formatting.rs  fs.rs  gop.rs  guid.rs  logger.rs  main.rs  panic.rs  pata.rs  sector_storage.rs  serial.rs  virtio.rs  virtio_blk.rs  virtio_gpu.rs
src/: allocator.rs  backtrace.rs  disk.rs  ext2.rs  guid.rs  logger.rs  main.rs  partitions.rs  sector_storage.rs
