[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86 = "0.52.0"
uefi = "0.20.0"
log = "0.4"
bytemuck = "1.13.1"
pretty-hex = "0.3.0"
acid_io = { git = "https://github.com/dataphract/acid_io", rev = "2d549317fe9253df8b510ba6bbdcfe623a837286", features = ["byteorder"] }
bitflags = "2.2.1"
object = { version = "0.31.1", default-features = false, features = ["read", "pe"] }
