cargo-features = ["per-package-target"]

[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-uefi"

[dependencies]
uefi = "0.21.0"
uefi-services = "0.18.0"
elf = { version = "0.7.2", default-features = false      }

[[bin]]
name = "bootloader"
test = false
bench = false
