cargo-features = ["per-package-target"]

[package]
name = "inline_debug_info"
version = "0.1.0"
edition = "2021"

[dependencies]
iced-x86 = "1.18.0"
object = { version = "0.31.1", features = ["write"] }
pdb = "0.8.0"
rustc-demangle = "0.1.23"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
